--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 
-$Id: ChangeLog,v 1.151 2001/03/25 00:22:13 pw Exp $
+$Id: ChangeLog,v 1.152 2001/04/16 00:16:21 pw Exp $
+
+Sun Apr 15 18:34:44 EDT 2001  Pete Wyckoff  <pw@osc.edu>
+	* doc/cell-refs.texi: Clarify noa0 mode range explanation.
+	* src/Makefile.am src/lex.c src/parse.y: New file lex.c, remove code
+	  from yacc source to its own file.  Massive rewrite of noa0 to handle
+	  all the cases (including that yucky sylk).
+	* src/byte-compile.c: Ansify, add some comments.
+	* src/decompile.c: Do not sort relative ranges, leave absolute sorting
+	  in place.  Remove + from positive relative offsets in cell and range
+	  printing.
+	* src/cmd.c: Mark a call through a function pointer explicit.
 
 Sat Mar 24 19:02:08 EST 2001  Pete Wyckoff  <pw@osc.edu>
 	* m4/xbae.m4: Complete conversion of ICE_Xbae -> AC_XBAE.
