--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 
-$Id: ChangeLog,v 1.155 2001/05/12 16:33:29 pw Exp $
+$Id: ChangeLog,v 1.156 2001/05/13 07:50:01 danny Exp $
+
+Sun May 13 09:49:31 CEST 2001, Danny Backx <danny@gnu.org>
+	* Portability fixes by Alexander Mai.
 
 Sat May 12 12:29:22 EDT 2001  Pete Wyckoff  <pw@osc.edu>
 	* src/Makefile.am: Add dependency to parse.h.
