--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 
-$Id: ChangeLog,v 1.157 2001/06/26 00:36:35 pw Exp $
+$Id: ChangeLog,v 1.158 2001/07/10 11:22:06 danny Exp $
+
+Tue Jul 10 13:15:36 CEST 2001, Danny Backx
+	* GSL 0.9 has -lgslcblas, not -lgslblas
+	* Link -lXp -lXext when -lXp is found.
 
 Mon Jun 25 20:30:43 EDT 2001  Pete Wyckoff  <pw@osc.edu>
 	* doc/options.texi: Document list option per Wes Baldwin email
