--- a/doc/basics.texi
+++ b/doc/basics.texi
@@ -606,16 +606,19 @@ previously saved one.
 @table @kbd
 @item C-x C-s
 Save the spreadsheet to a file, using the current
-file-format. (@code{save-spreadsheet})
+file-format (@pxref{Options} for how to change the file-format).
+(@code{save-spreadsheet})
 @cmindex save-spreadsheet
-@footnote{where is info on file formats?}
 
 @item C-x C-v 
-Read in a file in the current
-file-format.  This erases the current contents of the
+Read in a file.  The file format is detected by the extension
+of the filename, or using the default format if the file has
+no extension.  This erases the current contents of the
 spreadsheet first.  This may ask for confirmation.
-(@code{visit-spreadsheet})
-@cmindex visit-spreadsheet
+(Set the default format using M-x set-option file <format>, or
+in Motif, use the menu item, or use the "-F" command line argument.)
+(@code{find-alternate-spreadsheet})
+@cmindex find-alternate-spreadsheet
 
 @item C-x i
 Read in a file and merge its contents into the
@@ -629,12 +632,9 @@ Change whether load-hooks are run when spreadsheets are loaded.
 When active, the find-alternate-spreadsheet command looks for a variable
 called `load_hooks' and executes the macro at that address.
 With a positive prefix argument, turns load hooks on.  With a negative
-argument, turns them off.  With no argument, acts as a toggle.
-@footnote{what is the default}
+argument, turns them off.  With no argument, acts as a toggle.  Load
+hooks are on by default.
 @end table
-
-
-
 
 
 @node Command Line Options, .oleorc file, Saving and reading, Basics
