--- a/doc/options.texi
+++ b/doc/options.texi
@@ -80,7 +80,10 @@ M-x set-option RET list \11
 @end example
 The number to be used is the octal ASCII value of the desired control
 character.  Note that the separator could also be set to, e.g., the
-letter @code{z}.
+letter @code{z}.  Note that every separator is significant, i.e. a string
+of spaces will cause multiple blank cells to be entered into the current row.
+To get around this, use the handy unix utility tr(1), for example, to
+preprocess your data file.
 
 To retrieve a file which uses some separator, @code{s}, be sure the filename
 has the suffix @code{.list} on it, start oleo, set the file type to list and
@@ -223,9 +226,9 @@ In nobackup mode bkup_copy is ignored. (@code{Default})
 @item ticks
 @vindex  ticks (number)
 This value controls how often should rnd(), cell(), my(),
-curcell(), etc cells get updated.  This value is in
-seconds. @footnote{is it?} The initial value is 10, meaning once every
-10 seconds.
+curcell(), etc. cells get updated.  This value is in
+seconds.  The initial value is 1, meaning once every
+second.
 
 
 @item print
@@ -233,19 +236,17 @@ seconds. @footnote{is it?} The initial value is 10, meaning once every
 This is the width of the page for the print command.  The
 initial value is the width of the screen.
 
-@item file
+@item file (format-name)
 @vindex  file (format-name) 
-@footnote{I don't understand this}
-If -DUSE_DLD was defined, format-name may be any .o file
-that contains definitions for the appropriate functions.
-If -DUSE_DLD was not defined, format-name
-must be one of sylk, sc, or list, and Oleo will have
-to be re-compiled before any other formats may be used.
+Select the file format to use.  The argument @var{format-name}
+must be one of oleo, sylk, sylk-noa0, sc, or list.
+Note that if -DUSE_DLD was defined, format-name may be any .o file
+that contains definitions for the appropriate functions, which will
+be dynamically linked with the running oleo.
 
 @item load (file-name) 
 @vindex  load (file-name) 
-@footnote{nor do I understand this one}This option is only avaliable if
-Oleo was compiled with
+This option is only avaliable if Oleo was compiled with
 -DUSE_DLD.  This option loads in a .o file of spreadsheet
 functions, keyboard commands, and/or keymaps.  Spreadsheet
 functions and keyboard commands must be loaded in before they
