--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 
-$Id: ChangeLog,v 1.162 2002/03/06 18:48:39 danny Exp $
+$Id: ChangeLog,v 1.163 2003/01/16 00:36:36 pw Exp $
+
+Wed Jan 15 19:33:55 EST 2003  Pete Wyckoff  <pw@osc.edu>
+	* src/io-term.c: Fix --format argument parsing using getopt to
+	  use optarg, not argv[optind].  Fix stdin error handling not to
+	  try to say a filename.
 
 Wed Mar  6 19:51:51 2002, Danny Backx
 	* src/oleofile.c : save and read while in the C locale,
