--- a/po/fr.po
+++ b/po/fr.po
@@ -1,18 +1,19 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# translation of fr.po to Français
+# Copyright (C) 1998, 1999, 2000, 2001, 2004 Free Software Foundation, Inc.
+# Danny Backx <danny@gnu.org>, 1998-2001.
+# Girard Yoni <yoni.girard@tiscali.fr>, 2004.
 #
-# , fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU oleo 1.6.7\n"
-"POT-Creation-Date: 2001-03-10 15:32+0100\n"
-"PO-Revision-Date: 1998-08-27 17:50+0200\n"
-"Last-Translator: Danny Backx <danny@gnu.org>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Project-Id-Version: fr\n"
+"POT-Creation-Date: 1998-08-27 15:32+0100\n"
+"PO-Revision-Date: 2004-01-04 19:35GMT\n"
+"Last-Translator: Girard Yoni <yoni.girard@tiscali.fr>\n"
+"Language-Team: Français\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.0.2\n"
 
 #: src/io-term.c:815
 #, c-format
@@ -20,12 +21,14 @@ msgid ""
 "This is %s %s\n"
 "\n"
 msgstr ""
+"%s %s\n"
+"\n"
 
 # , c-format
 #: src/io-term.c:817
 #, c-format
 msgid "Usage: %s [OPTION]... [FILE]...\n"
-msgstr "Utilisage: %s [OPTION]... [FILE]...\n"
+msgstr "Utilisation: %s [OPTION]... [FICHIER]...\n"
 
 #: src/io-term.c:820
 msgid ""
@@ -43,49 +46,62 @@ msgid ""
 "\n"
 "Report bugs to <bug-oleo@gnu.org>.\n"
 msgstr ""
+"\n"
+"  -h, --help               affiche l'aide et quitte\n"
+"  -V, --version            affiche la version du logiciel et quitte\n"
+"  -q, --quiet              ne pas afficher le message de démarrage\n"
+"  -f, --ignore-init-file   ignore settings defined in init file\n"
+"  -t, --no-toolkit         désactiver le kit X\n"
+"  -x, --nw                 disable graphics and fallback to curses\n"
+"  -s x, --separator x\t   set separator for 'list' file type to x\n"
+"  -S, --space\t\t   set separator for 'list' file type to a space\n"
+"  -F x, --format x\t   mettre le type de fichier à x (oleo, list, sc  ...)\n"
+"  --filter\t\t   lire sur l'entrée standard, écrire sur la sortie standard\n"
+"\n"
+"Reportez les bogues à <bug-oleo@gnu.org> (en anglais).\n"
 
 # , c-format
 #: src/io-term.c:1025
 #, c-format
 msgid "%s %s\n"
-msgstr ""
+msgstr "%s %s\n"
 
 #: src/io-term.c:1026
-msgid "Copyright © 1992-2000 Free Software Foundation, Inc.\n"
-msgstr ""
+msgid "Copyright  1992-2000 Free Software Foundation, Inc.\n"
+msgstr "Copyright  1992-2000 Free Software Foundation, Inc.\n"
 
 # , c-format
 #: src/io-term.c:1027
 #, c-format
 msgid "%s comes with ABSOLUTELY NO WARRANTY.\n"
-msgstr ""
+msgstr "%s est fourni sans AUCUNE GARANTIE.\n"
 
 # , c-format
 #: src/io-term.c:1028
 #, c-format
 msgid "You may redistribute copies of %s\n"
-msgstr ""
+msgstr "Vous pouvez redistribuer des copies de %s\n"
 
 #: src/io-term.c:1029
 msgid "under the terms of the GNU General Public License.\n"
-msgstr ""
+msgstr "sous les termes de la GNU General Public License.\n"
 
 #: src/io-term.c:1030
 msgid "For more information about these matters, "
-msgstr ""
+msgstr "Pour plus d'informations à propos de ceci, "
 
 #: src/io-term.c:1031
 msgid "see the files named COPYING.\n"
-msgstr ""
+msgstr "regardez le fichier nommé COPYING.\n"
 
 #: src/io-term.c:1174
 msgid "Error in the builtin init scripts (a bug!).\n"
-msgstr "Erreur dans les initialisations (erreur de programmation !).\n"
+msgstr "Erreur dans les initialisations (un bogue !).\n"
 
 #: src/io-term.c:1194 src/io-term.c:1196
 #, c-format
 msgid "   error occured in init file %s near line %d."
-msgstr "   erreur dans le fichier d'initialisation %s pres de ligne %d."
+msgstr "   erreur dans le fichier d'initialisation %s près de la ligne %d."
 
 #: src/io-term.c:1215 src/io-term.c:1216
 #, c-format
@@ -95,21 +111,21 @@ msgstr ", erreur en lisant '%s'\n"
 #: src/io-term.c:1223 src/io-term.c:1224
 #, c-format
 msgid "Can't open %s: %s\n"
-msgstr "Je ne peux pas ouvrir '%s'.\n"
+msgstr "Je ne peux pas ouvrir %s: %s.\n"
 
 #: src/io-motif.c:722
 msgid "Fit Print Area"
-msgstr ""
+msgstr "Désignez l'aire d'impression"
 
 # , c-format
 #: src/io-motif.c:791
 #, c-format
 msgid "Conversion error: cannot convert '%s' to a %s\n"
-msgstr "Conversion error: cannot convert '%s' to a %s\n"
+msgstr "Impossible de convertir '%s' vers un %s\n"
 
 #: src/io-motif.c:946 src/io-motif.c:1111
 msgid "Cannot find XmNuserData\n"
-msgstr "Internal error: Cannot find XmNuserData\n"
+msgstr "Impossible de trouver XMNuserData\n"
 
 #: src/io-motif.c:985 src/io-motif.c:1008 src/io-motif.c:1031
 #: src/io-motif.c:1053 src/io-motif.c:1070 src/io-motif.c:1955
@@ -117,15 +133,15 @@ msgstr "Internal error: Cannot find XmNuserData\n"
 #: src/io-motif.c:3703 src/io-motif.c:3738 src/io-motif.c:3747
 #: src/io-motif.c:4063
 msgid "range"
-msgstr "range"
+msgstr "zone"
 
 #: src/io-motif.c:1391
 msgid "Plotter Type"
-msgstr "Type de plotter"
+msgstr "Type de Plot"
 
 #: src/io-motif.c:1436 src/io-motif.c:2927
 msgid "*.oleo"
-msgstr ""
+msgstr "*.oleo"
 
 #: src/io-motif.c:1648
 msgid "X Axis Tick Label Type"
@@ -137,7 +153,7 @@ msgstr ""
 
 #: src/io-motif.c:1949
 msgid "Internal error: can't find what to print to\n"
-msgstr "Erreur interne: je ne sais pas á quoi imprimer\n"
+msgstr "Erreur interne: je ne sais pas quoi imprimer\n"
 
 #: src/io-motif.c:2043
 msgid "*.out"
@@ -145,10 +161,8 @@ msgstr "*.out"
 
 #: src/io-motif.c:2102
 #, c-format
-msgid ""
-"Value of defaultPrintTo resource is invalid, should be one of %s, %s, or %s\n"
-msgstr ""
-"Valeur de defaultPrintTo est incorrecte, doit etre une de %s, %s, ou %s.\n"
+msgid "Value of defaultPrintTo resource is invalid, should be one of %s, %s, or %s\n"
+msgstr "Valeur de defaultPrintTo est incorrecte, doit être une de %s, %s, ou %s.\n"
 
 #: src/io-motif.c:2157
 msgid "Select Printer"
@@ -156,15 +170,15 @@ msgstr "Selectionnez une imprimante"
 
 #: src/io-motif.c:2243
 msgid "Paper Format"
-msgstr ""
+msgstr "Format de papier"
 
 #: src/io-motif.c:2268
 msgid "Printer Language"
-msgstr ""
+msgstr "Langage de l'imprimante"
 
 #: src/io-motif.c:2444
 msgid "File Format"
-msgstr ""
+msgstr "Format de Fichier"
 
 # , c-format
 #. enough
@@ -177,147 +191,149 @@ msgstr "[Oleo: %s]"
 #: src/io-motif.c:2887
 #, c-format
 msgid "Read file '%s'\n"
-msgstr "Read file '%s'\n"
+msgstr "Fichier lu '%s'\n"
 
 #: src/io-motif.c:2954
 msgid "Choose a file to load"
-msgstr ""
+msgstr "Choisissez un fichier à charger"
 
 #: src/io-motif.c:3060 src/io-motif.c:5933
 msgid ""
 "There are unsaved changes.\n"
 "Do you want to quit anyway ?"
 msgstr ""
-"Quelques changements n'ont pas été écrites.\n"
+"Quelques changements n'ont pas été enregistrés.\n"
 "Voulez-vous quitter ?"
 
 # , c-format
 #: src/io-motif.c:3096
 #, c-format
 msgid "OleoOpenForWrite: can't move %s to %s"
-msgstr ""
+msgstr "OleoOpenForWrite: impossible de déplacer %s vers %s"
 
 # , c-format
 #: src/io-motif.c:3108
 #, c-format
 msgid "OleoOpenForWrite: couldn't open file '%s' for write"
-msgstr ""
+msgstr "OleoOpenForWrite: impossible d'ouvrir le fichier '%s' pour écrire"
 
 # , c-format
 #: src/io-motif.c:3124
 #, c-format
 msgid "ReallySaveCB(%s): couldn't open file for writing"
-msgstr ""
+msgstr "ReallySaveCB(%s): impossible d'ouvrir le fichier pour écrire"
 
 #. handle error
 #: src/io-motif.c:3133
 msgid "ReallySaveCB: file close failed"
-msgstr ""
+msgstr "ReallySaveCB: la fermeture du fichier a échoué"
 
 # , c-format
 #: src/io-motif.c:3138
 #, c-format
 msgid "Saved file '%s'\n"
-msgstr "Saved file '%s'\n"
+msgstr "Fichier enregistré '%s'\n"
 
 #: src/io-motif.c:3153
 msgid "ReallySaveCB: couldn't figure out file to save into"
-msgstr ""
+msgstr "ReallySaveCV: impossible d'écrire dans le fichier de sortie"
 
 #: src/io-motif.c:3179
 msgid "Choose a file to save in"
-msgstr ""
+msgstr "Choisissez le fichier pour sauvegarder"
 
 #: src/io-motif.c:3312 src/io-motif.c:3347
 msgid ""
 "<html><body>Can't find the requested help file\n"
 "</body></html>"
 msgstr ""
+"<html><body> Impossible de trouver le fichier d'aide demandé\n"
+"</body></html>"
 
 # , c-format
 #: src/io-motif.c:3355
 #, c-format
 msgid "Help requested on '%s'"
-msgstr ""
+msgstr "Aide demandée sur '%s'"
 
 #: src/io-motif.c:3357
 msgid "Help requested on using Oleo"
-msgstr ""
+msgstr "Aide demandée sur l'utilisation d'Oleo"
 
 #: src/io-motif.c:3595
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: src/io-motif.c:3596
 msgid "Cancel"
-msgstr ""
+msgstr "Annuler"
 
 #: src/io-motif.c:3769
 msgid "Copy a region"
-msgstr ""
+msgstr "Copier une zone"
 
 #: src/io-motif.c:3777
 msgid "Copy Values"
-msgstr ""
+msgstr "Copier les Valeurs"
 
 #: src/io-motif.c:3785
 msgid "Move"
-msgstr ""
+msgstr "Déplacer"
 
 #: src/io-motif.c:3898
 msgid "Formats :"
-msgstr ""
+msgstr "Formarts :"
 
 #: src/io-motif.c:3900
 msgid "Default"
-msgstr ""
+msgstr "Défaut"
 
 #. FMT_DEF
 #: src/io-motif.c:3901
 msgid "Hidden"
-msgstr ""
+msgstr "Masqué"
 
 #. FMT_HID
 #: src/io-motif.c:3902
 msgid "Graph"
-msgstr ""
+msgstr "Graphique"
 
 #. FMT_GPH
 #: src/io-motif.c:3903
 msgid "General"
-msgstr ""
+msgstr "Général"
 
 #. FMT_GEN
 #: src/io-motif.c:3904
 msgid "Dollar"
-msgstr ""
+msgstr "Dollar"
 
 #. FMT_DOL
 #: src/io-motif.c:3905
 msgid "Comma"
-msgstr ""
+msgstr "Espace"
 
 #. FMT_CMA
 #: src/io-motif.c:3906
 msgid "Percent"
-msgstr ""
+msgstr "Poucentage"
 
 #. FMT_PCT
 #: src/io-motif.c:3907
 msgid "Integer"
-msgstr ""
+msgstr "Entier"
 
 #: src/io-motif.c:3908
 msgid "Decimal"
-msgstr ""
+msgstr "Décimal"
 
 #: src/io-motif.c:3909
 msgid "Fixed"
-msgstr ""
+msgstr "Fixe"
 
 #: src/io-motif.c:3910
 msgid "Exponent"
-msgstr ""
+msgstr "Exposant"
 
 #: src/io-motif.c:3911
 msgid "Date"
@@ -326,19 +342,19 @@ msgstr "Date"
 #. FMT_DATE
 #: src/io-motif.c:3912
 msgid "User-1"
-msgstr ""
+msgstr "Utilisateur-1"
 
 #: src/io-motif.c:3913
 msgid "User-2"
-msgstr ""
+msgstr "Utilisateur-2"
 
 #: src/io-motif.c:3914
 msgid "User-3"
-msgstr ""
+msgstr "Utilisateur-3"
 
 #: src/io-motif.c:3915
 msgid "User-4"
-msgstr ""
+msgstr "Utilisateur-4"
 
 #: src/io-motif.c:3989
 msgid "Date Format"
@@ -346,4 +362,5 @@ msgstr "Format de date"
 
 #: src/io-motif.c:4791 src/io-motif.c:5906
 msgid "XmProcessTraversal failed\n"
-msgstr "Internal error: XmProcessTraversal failed\n"
+msgstr "échec de XmProcessTraversal\n"
+
