indicate latest version in the NEWS file

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+===== Oleo 1.99.17 =====
+
+Various patches and updates have been applied to the code base.
+
 ===== Oleo 1.99.8 =====
 
 Lots of internal cleanup so the Motif version of Oleo stands a chance
