--- a/doc/functions.texi
+++ b/doc/functions.texi
@@ -76,6 +76,8 @@ converted to a number.  Thus, @code{isnum("12")} is @code{#TRUE}, while
 @menu
 * General math functions::              log, sqrt, etc.
 * Trigonometric functions::             Trigonometric functions
+* Hyperbolic functions::                Hyperbolic functions
+* Extra math functions::                Erf, Gamma, Bessel 
 * Statistical functions::               Statistical functions
 @end menu
 
@@ -176,6 +178,7 @@ from 1 second to 10 seconds, type
 @end ifhtml
 
 @table @code
+
 @item pi()
   Constant; 15 decimals of 
 @ifinfo
@@ -184,9 +187,9 @@ pi,
 @tex
 $\pi$,
 @end tex
-3.141592653589793.
+
 @item sin(@var{ang}) 
-  The sine of angle @var{ang} (in radians).
+  The sine of angle @var{ang} (measured in radians).
 @findex sin
 
 @item cos(@var{ang})
@@ -194,12 +197,12 @@ $\pi$,
 @findex cos
 
 @item tan(@var{ang})
-  The  tangent of angle @var{ang} (in radians).
+  The tangent of angle @var{ang} (in radians).
 @findex tan
 
 @item asin(@var{val})
 @findex asin
-  The arc sine (in radians) of @var{val}.
+  The arc sine (in radians)  of @var{val}.
 
 @item acos(@var{val})
 @findex acos
@@ -235,9 +238,174 @@ and @var{y}; i.e., @w{@code{sqrt(@var{x}*@var{x} + @var{y}*@var{y})}}.
 (@pxref{General math functions})
 @end table
 
+ 
 
-@node   Statistical functions,  , Trigonometric functions, Math functions
-@subsection Statistical Functions
+@node   Hyperbolic functions, Trigonometric functions, Statistical functions
+
+@ifhtml
+<A NAME="HelpHyperbolicFunctions">
+@end ifhtml
+
+@table @code
+
+@item sinh(@var{arg}) 
+  The hyperbolic sine of argument @var{arg}.
+@findex sinh
+
+@item cosh(@var{arg})
+  The  hyperbolic cosine of argument @var{arg}.
+@findex cosh
+
+@item tanh(@var{arg})
+  The  hyperbolic tangent of argument @var{arg}.
+@findex tanh
+
+@item asinh(@var{val})
+@findex asinh
+  The arg (or inverse function of) hyperbolic sine of @var{val}.
+
+@item acosh(@var{val})
+@findex acosh
+  The (positive) arg  hyperbolic cosine of @var{val}.
+
+@item atanh(@var{val})
+@findex atan
+  The arg  hyperbolic tangent of @var{val}.
+
+@end table
+
+@node   Extra math functions, Hyperbolic functions, Trigonometric functions
+@ifhtml
+<A NAME="HelpExtramathFunctions">
+@end ifhtml
+See http://dlmf.nist.gov for definitions. 
+@table @code
+
+@item cbrt(@var{val})
+@findex cbrt
+The cube root of @var{val}.
+
+@item erf(@var{val})
+@findex erf
+The error function (integral of the Gaussian)  of @var{val}.
+@tex
+$${\rm erf}(x)={2 \over \sqrt{\pi}}\int_0^x e^{-t^2} dt$$  
+@end tex
+
+@item gamma(@var{val})
+@findex gamma
+The gamma function (generalized factorial)  of @var{val}.
+@tex
+$$\Gamma(x)=\int_0^{+\infty} t^{x-1} e^{-t} dt $$
+@end tex
+
+@item beta(@var{val1},@var{val2})
+@findex beta
+The beta function of @var{val1} and @var{val2}.
+@tex
+$$\Beta(x,y)={{\Gamma(x)\Gamma(y)} \over {\Gamma(x+y)}} $$ 
+@end tex
+
+@item ibeta(@var{val1},@var{var2},@var{var3})
+@findex ibeta
+The incomplete beta function of @var{val1},@var{var2} and @var{var3}.
+@tex
+$$\Beta(a,b,x)=\int_0^x t^{a-1}(1-t)^{b-1} dt $$
+@item binomial(@var{val1},@var{val2})
+@findex beta
+The binomial coefficient of @var{val1} and @var{val2}, i. e. the number
+of ways to pick @var{val2} objects among @var{val1}.
+@tex
+$${\rm C}_n^m = {{n!}\over {m! (n-m)!} $$
+@end tex 
+
+@item studentA(@var{var1},@var{val2})
+@findex studentA
+The cumulative distribution function of the Student t-distribution with
+@var{val2} degrees of freedom, i. e. the probability that the normalized
+Student random variable will be less than @var{val1}.
+
+@item chi2Q(@var{var1},@var{val2})
+@findex chi2Q
+The cumulative distribution function of the Chi squared distribution with
+@var{val2} degrees of freedom, i. e. the probability that the normalized
+Chi squared random variable will be greater than @var{val1}.
+
+@item kolmQ(@var{val})
+@findex kolmQ
+The cumulative distribution function of the Kolmogorov distribution
+i. e. the probability that the Kolmogorov random variable
+will be greater than @var{val}.
+
+@item fisherQ(@var{val1},@var{val2},@var{val3})
+@findex fisherQ
+The cumulative distribution function of the Fisher-Snedecor (or
+variance-ratio) F-distribution with @var{val1} and @var{val2} degrees of
+freedom i. e. the probability that the F variable (ratio of two
+normalized chi-square distributed random variable) will be greater than
+@var{val3}. @var{val1} is the number of degrees of freedom of the
+chi-square variable in the numerator, while @var{val2} the number of degrees
+of freedom of the chi-squared variable in the denominator.
+
+@item besj0(@var{val})
+@findex besj0 
+The Bessel function of the first kind J0  of @var{val}.
+
+@item besy0(@var{val})
+@findex besy0 
+The Bessel function of the second kind Y0 (also called Weber function)   of @var{val}. Undefined when @var{val} is
+negative. 
+
+@item besj1(@var{val})
+@findex besj1 
+The Bessel function of the first kind J1  of @var{val}. Undefined when @var{val} is
+negative. 
+
+@item besy1(@var{val})
+@findex besy1 
+The Bessel function of the second kind Y1  of @var{val}.
+
+
+@item besjn(@var{n},@var{val})
+@findex besjn
+The Bessel function J@var{n} (with integer parameter @var{n}) of
+@var{val}.
+
+@item besyn(@var{n},@var{val})
+@findex besyn
+The Bessel function of the second kind Y@var{n} (with integer parameter @var{n}) of
+@var{val}. Undefined when @var{val} is negative. 
+
+@item besi0(@var{val})
+@findex besi0 
+The Modified Bessel function of the first kind I0  of @var{val}.
+
+@item besk0(@var{val})
+@findex besk0 
+The Bessel function of the third kind (or MacDonald function) K0  of @var{val}. Undefined when @var{val} is
+negative. 
+
+@item ellK(@var{val})
+@findex ellK
+The complete elliptic integral of the first kind K of
+@var{val}. Undefined when @var{val} is greater than one.
+@tex
+$$K(m)=\int_0^{\pi/2} {1\over \sqrt{1-m\sin^2 theta}}  d\theta $$
+@end tex
+
+@item ellE(@var{val})
+@findex ellE
+The complete elliptic integral of the second kind E of
+@var{val}. Undefined when @var{val} is greater than one.
+@tex
+$$E(m)=\int_0^{\pi/2} \sqrt{1-m\sin^2 theta} d\theta $$
+@end tex
+
+
+
+@end table
+
+@node   Statistical functions, Extra math functions, Hyperbolic functions
 @cindex Statistical functions
 @cindex Functions, statistical
 
